--- a/cdk/requirements.txt
+++ b/cdk/requirements.txt
@@ -1,2 +1,64 @@
-aws-cdk-lib==2.181.1
-constructs>=10.0.0,<11.0.0
+attrs==25.3.0
+aws-cdk.assets==1.204.0
+aws-cdk.aws-acmpca==1.204.0
+aws-cdk.aws-apigateway==1.204.0
+aws-cdk.aws-applicationautoscaling==1.204.0
+aws-cdk.aws-autoscaling==1.204.0
+aws-cdk.aws-autoscaling-common==1.204.0
+aws-cdk.aws-autoscaling-hooktargets==1.204.0
+aws-cdk.aws-certificatemanager==1.204.0
+aws-cdk.aws-cloudformation==1.204.0
+aws-cdk.aws-cloudfront==1.204.0
+aws-cdk.aws-cloudwatch==1.204.0
+aws-cdk.aws-codebuild==1.204.0
+aws-cdk.aws-codecommit==1.204.0
+aws-cdk.aws-codedeploy==1.204.0
+aws-cdk.aws-codeguruprofiler==1.204.0
+aws-cdk.aws-codepipeline==1.204.0
+aws-cdk.aws-codepipeline-actions==1.204.0
+aws-cdk.aws-codestarnotifications==1.204.0
+aws-cdk.aws-cognito==1.204.0
+aws-cdk.aws-ec2==1.204.0
+aws-cdk.aws-ecr==1.204.0
+aws-cdk.aws-ecr-assets==1.204.0
+aws-cdk.aws-ecs==1.204.0
+aws-cdk.aws-efs==1.204.0
+aws-cdk.aws-elasticloadbalancing==1.204.0
+aws-cdk.aws-elasticloadbalancingv2==1.204.0
+aws-cdk.aws-events==1.204.0
+aws-cdk.aws-events-targets==1.204.0
+aws-cdk.aws-globalaccelerator==1.204.0
+aws-cdk.aws-iam==1.204.0
+aws-cdk.aws-kinesis==1.204.0
+aws-cdk.aws-kinesisfirehose==1.204.0
+aws-cdk.aws-kms==1.204.0
+aws-cdk.aws-lambda==1.204.0
+aws-cdk.aws-logs==1.204.0
+aws-cdk.aws-route53==1.204.0
+aws-cdk.aws-route53-targets==1.204.0
+aws-cdk.aws-s3==1.204.0
+aws-cdk.aws-s3-assets==1.204.0
+aws-cdk.aws-sam==1.204.0
+aws-cdk.aws-secretsmanager==1.204.0
+aws-cdk.aws-servicediscovery==1.204.0
+aws-cdk.aws-signer==1.204.0
+aws-cdk.aws-sns==1.204.0
+aws-cdk.aws-sns-subscriptions==1.204.0
+aws-cdk.aws-sqs==1.204.0
+aws-cdk.aws-ssm==1.204.0
+aws-cdk.aws-stepfunctions==1.204.0
+aws-cdk.cloud-assembly-schema==1.204.0
+aws-cdk.core==1.204.0
+aws-cdk.custom-resources==1.204.0
+aws-cdk.cx-api==1.204.0
+aws-cdk.pipelines==1.204.0
+aws-cdk.region-info==1.204.0
+cattrs==24.1.2
+constructs==3.4.344
+importlib_resources==6.5.2
+jsii==1.109.0
+publication==0.0.3
+python-dateutil==2.9.0.post0
+six==1.17.0
+typeguard==2.13.3
+typing_extensions==4.12.2
